# rust_task_queue

./: Cargo.toml  README.md
src/: main.rs  notes.txt  task_queue.rs  task_registry.rs
src/ampq/: connection.rs
src/task/: mod.rs
src/task_macro/: Cargo.toml
src/task_macro/src/: lib.rs
