[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
lapin = "2.5.3"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.45.1", features = ["full"] }
task_macro = { path = "src/task_macro" }
ctor = "0.2"
deadpool-lapin = "0.12.1"
once_cell = "1.21.3"
futures-util = "0.3.31"
futures = "0.3.31"
